public/style.css
@font-face {
  font-family: StarJedi;
  src: url(/Starjedi.ttf);
}

@font-face {
  font-family: Aurebesh;
  src: url(/Aurebesh.ttf);
}

body {
  background: url('/backgrounds/millenium.jpeg'),
    linear-gradient(rgba(5, 8, 46, 0.712), rgba(53, 0, 0, 0.801));
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-position: center center;
  background-size: cover;
}

a {
  text-decoration: none;
}

label {
  display: block;
}

nav a {
  display: inline-block;
  margin: 1em;
}

/* materializecss overrides */
/* selector colors */
/* .switch label .lever {
  background-color: #79ff4d;
} */
.switch {
  margin-top: 1rem;
  margin-bottom: 1rem;
}

.switch label input[type='checkbox']:checked + .lever {
  background-color: #fff2035d;
}
.switch label input[type='checkbox']:checked + .lever:after {
  background-color: #fff103;
}

.input-field input[type='text'] + label,
.materialize-textarea:focus:not([readonly]) + label {
  color: #1a237e !important;
}

.input-field input[type='text'],
.materialize-textarea:focus:not([readonly]) {
  border-bottom: 1px solid #bbb !important;
  box-shadow: 0 1px 0 0 #bbb !important;
}

.input-field input[type='text']:focus + label,
.materialize-textarea:focus:not([readonly]) + label {
  color: #fff103 !important;
}

.input-field input[type='text']:focus,
.materialize-textarea:focus:not([readonly]) {
  border-bottom: 1px solid #fff103 !important;
  box-shadow: 0 1px 0 0 #fff103 !important;
}

/* positioning toast continer (override materialize css) */
#toast-container {
  bottom: auto !important;
  left: auto !important;
  top: 2%;
  right: 6%;
}

/* Editor Styles */
.CodeMirror {
  height: 100% !important;
  font-size: 1rem;
}

/* Variables */
:root {
  --editor-bg: #333;
  --editor-border: #b8b8b8;
}

/* Reset Styles */

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  /* font-family: 'Courier New'; */
}

.testImg {
  display: flex;
  justify-content: center;
  align-items: center;
}

.testImg img {
  width: 50%;
  margin: 1.5rem;
}

.switch {
  display: flex;
  justify-content: center;
}

/* Trying Bootstrap */
.bootstrap-container {
  background-color: rgba(0, 0, 0, 0.5);
  min-width: 800px;
  margin-left: auto;
  margin-right: auto;
  display: flex;
  margin-bottom: 2rem;
  margin-top: 1rem;
  border-radius: 3rem;
  border: 0.15rem solid rgba(255, 255, 255, 0.5);
  box-shadow: 12px 12px 20px 2px rgba(0, 0, 0, 0.5);
  backdrop-filter: blur(0.3rem) saturate(40%);
}

.bootstrap-col {
  padding: 5rem;
  padding-top: 3rem;
  color: rgb(255, 255, 255);
  margin-left: auto;
  margin-right: auto;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.bootstrap-col::before {
  position: relative;
  font-size: 25px;
  top: 0;
  display: block;
  text-align: center;
}

.col-one::before {
  content: 'Player List';
  font-family: 'StarJedi';
  color: #fff103;
  margin-bottom: 1rem;
}
.col-two {
  border-left: 0.15rem solid rgba(255, 255, 255, 0.5);
  border-right: 0.15rem solid rgba(255, 255, 255, 0.5);
}
.col-three::before {
  content: 'Chat';
  font-family: 'StarJedi';
  color: #fff103;
  padding-left: 0;
  padding-right: 0;
}

/* CSS Grid Tests */
/*
.grid-container {
  position: relative;
  width: 90%;
  background-color: rgba(0, 0, 0, 0.5);
  overflow: hidden;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 2rem;
  margin-top: 1rem;
  height: 10%;
  border-radius: 3rem;
  border: 0.15rem solid rgba(255, 255, 255, 0.5);
  box-shadow: 12px 12px 20px 2px rgba(0, 0, 0, 0.5);
  backdrop-filter: blur(0.3rem) saturate(40%);
  display: grid;
  grid-auto-flow: column;
  gap: 1em;
  min-width: 800px;
}

.grid-item {
  position: relative;
  padding: 5rem;
  padding-top: 3rem;
  color: rgb(255, 255, 255);
  min-width: 10rem;
  margin-left: auto;
  margin-right: auto;
}

.grid-item-2 {
  padding-top: 3rem;
  color: rgb(255, 255, 255);
  border-left: 0.15rem solid rgba(255, 255, 255, 0.5);
  border-right: 0.15rem solid rgba(255, 255, 255, 0.5);
  min-width: 30rem;
}

.grid-item-3 {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 0;
}

.grid-item::before {
  position: relative;
  font-size: 25px;
  top: 0;
  display: block;
  text-align: center;
}

.grid-item-1::before {
  content: 'Player List';
  font-family: 'StarJedi';
  color: #fff103;
  margin-bottom: 1rem;
}

.grid-item-3::before {
  content: 'Chat';
  font-family: 'StarJedi';
  color: #fff103;
  padding-top: 3rem;
  padding-left: 0;
  padding-right: 0;
}
*/

.marquee-sw {
  font-family: 'Aurebesh';
  color: rgba(255, 255, 255, 0.8);
  text-shadow: 0px 0px 10px white, 0 0 25px dodgerblue, 0 0 25px dodgerblue;
  /* width: 111%; */
  width: 105%;
}

.emoji-categories {
  background-color: rgb(207, 207, 207);
}

/* MiniGame CSS STYLING */

#game {
  margin-top: 200px;
  width: 650px;
  height: 500px;
  border: 1px solid black;
  background: url('./backgrounds/star-wars-backgrounds-25.jpg');
}

div.bb8 {
  content: url('./minigame_characters/BB8.png');
}

div.stormtrooperOne {
  content: url('./minigame_characters/8-bit-stormtroopers_0002_Layer-0.png');
}

div.stormtrooperTwo {
  content: url('./minigame_characters/8-bit-stormtroopers_0001_Layer-1.png');
}

div.stormtrooperThree {
  content: url('./minigame_characters/8-bit-stormtroopers_0000_Layer-2.png');
}

#character {
  width: 50px;
  height: 100px;
  position: relative;
  top: 330px;
  left: 20px;
}

#block {
  width: 50px;
  height: 100px;
  position: relative;
  top: 230px;
  left: 480px;
  animation: block 1s infinite linear;
}

#counter {
  display: flex;
  justify-content: flex-end;
  align-items: flex-end;
  width: 625px;
  color: white;
}

.animate {
  animation: jump 500ms;
}

h1 {
  color: white;
}

@keyframes block {
  0% {
    left: 650px;
  }
  100% {
    left: -20px;
  }
}

@keyframes jump {
  0% {
    top: 330px;
  }
  30% {
    top: 220px;
  }
  70% {
    top: 220px;
  }
  100% {
    top: 330px;
  }
}

